fix visual issues on mobile display

--- a/src/index.css
+++ b/src/index.css
@@ -111,6 +111,10 @@ input[type="radio"] {
   margin-top: 7px;
 }
 
+.scnd-unit {
+  margin-top: 1.6rem;
+}
+
 input[type="number"] {
   padding: 0.5rem 2rem 0.5rem 1.3rem;
   color: var(--gunmetal);
@@ -384,6 +388,7 @@ strong {
 
   .result {
     all: initial;
+    margin-top: 15%;
     display: flex;
     font-family: inherit;
     justify-content: space-between;
@@ -455,6 +460,7 @@ strong {
   .limit-intro {
     text-align: center;
     margin-bottom: 5rem;
+    max-width: 100%;
   }
 
   .limit-intro h2 {
@@ -467,6 +473,7 @@ strong {
 
   .items {
     grid-template-columns: 1fr 1fr;
+    transform: initial;
   }
 
   .item {
@@ -474,8 +481,21 @@ strong {
     min-width: 200px;
   }
 
-  .items div:nth-of-type(5) {
+  .items .item:nth-of-type(1),
+  .items .item:nth-of-type(2),
+  .items .item:nth-of-type(3),
+  .items .item:nth-of-type(4) {
+    grid-area: auto;
+    margin: 0;
+  }
+
+  .items .item:nth-of-type(5) {
+    grid-area: auto;
     grid-column: 1/3;
     justify-self: center;
+  }
+
+  .item p {
+    font-size: 1.2rem;
   }
 }
